# lifeos-cli

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.zh-Hans.md  SECURITY.md  alembic.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependency-review.yml  frontend-dependency-audit.yml  publish.yml  validate.yml
alembic/: env.py
alembic/versions/: 20260409_0600_create_notes_table.py  20260409_1200_create_core_domain_tables.py  20260409_1300_create_habit_tables.py  20260409_1400_create_event_and_timelog_tables.py  20260410_0900_remove_area_person_associations.py  20260410_1200_add_event_recurrence_support.py
docs/: cli.md
scripts/: audit_cli_help.py  audit_web_api_payload_fields.py  check_locale_catalog.py  clean.sh  convert_bundle_v1_to_v2.py  dead_code_check.sh  dependency_health.sh  doctor.sh  integration_tests.sh  lint.sh  load_local_env.sh  purge_deleted_records.py  vulture_whitelist.py  web_dependency_health.sh  web_validate.sh
src/lifeos/: __init__.py  cli.py  core.py
src/lifeos_cli/: __init__.py  cli.py  config.py  core.py  i18n.py
src/lifeos_cli/alembic/: __init__.py  env.py
src/lifeos_cli/application/: __init__.py  calendar_adapter.py  configuration.py  database.py  datetime_utils.py  package_metadata.py  preferences.py  time_preferences.py
src/lifeos_cli/cli_support/: __init__.py  area_handlers.py  area_parser.py  config_commands.py  db_commands.py  handler_utils.py  help_audit.py  help_utils.py  init_prompts.py  note_commands.py  note_handlers.py  note_parser.py  note_parser_actions.py  output_utils.py  parser.py  parser_common.py  people_handlers.py  people_parser.py  runtime_utils.py  shared.py  tag_handlers.py  tag_parser.py  task_handlers.py  task_parser.py  time_args.py  vision_handlers.py  vision_parser.py
src/lifeos_cli/db/: __init__.py  admin.py  backend_policy.py  base.py  maintenance.py  session.py  sql_expressions.py  transaction.py  types.py
src/lifeos_web/: __init__.py  app.py  deps.py  schemas.py  serialization.py  server.py
src/lifeos_web/routers/: __init__.py  areas.py  dimensions.py  finance.py  habits.py  health.py  notes.py  persons.py  planned_events.py  preferences.py  stats.py  tags.py  tasks.py  timelog_templates.py  timelogs.py  visions.py
tests/: __init__.py  cli_integration_support.py  config_support.py  conftest.py  support.py  test_backend_policy.py  test_calendar_adapter.py  test_cli.py  test_cli_data.py  test_cli_domains.py  test_cli_domains_records.py  test_cli_domains_workflows.py  test_cli_help_audit.py  test_cli_help_content.py  test_cli_help_hierarchy.py  test_cli_help_zh_hans.py  test_cli_init.py  test_cli_integration.py  test_cli_integration_data.py  test_cli_integration_habits.py  test_cli_integration_notes.py  test_cli_integration_resources.py  test_cli_integration_schedule.py  test_cli_integration_support.py  test_cli_integration_system.py  test_cli_integration_time.py  test_cli_notes.py  test_cli_parser.py  test_cli_parser_core.py  test_cli_runtime_utils.py  test_cli_schedule.py  test_cli_sqlite_workflow.py  test_cli_time_args.py  test_cli_timelog_bulk_add.py  test_cli_timelog_stats.py  test_config.py  test_convert_bundle_v1_to_v2.py  test_core.py  test_data_ops.py  test_datetime_utils.py  (+23 more)
web/: .env.example  .gitignore  .repomixignore  README.md  eslint.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  tsconfig.test.json  vite.config.ts
web/docs/: context-hook-organization.md
web/src/: index.css  main.tsx  routeTree.gen.ts  setupTests.ts  theme.ts
web/src/components/: ActionButton.tsx  AdvancedSearchPanel.tsx  Agent.tsx  ApiErrorToaster.tsx  AreaBadge.tsx  AreaManagerModal.tsx  AreaSorter.tsx  BatchEditModal.tsx  ConfirmDialog.tsx  CreateNoteModal.tsx  DimensionBadge.tsx  DimensionManagerModal.tsx  DimensionSorter.tsx  DraggableTaskList.tsx  EmptyState.tsx  EntryRow.tsx  ErrorBoundary.tsx  ErrorDisplay.tsx  ExpandableCard.tsx  FoodFormModal.tsx  FoodLibrarySidebar.tsx  HoverTooltipOverlay.tsx  InlineQuickFoodEntry.tsx  InlineQuickTimeEntry.tsx  InlineTooltipTrigger.tsx  (+41 more)
web/test/: setupTranslationMock.tsx  utils.tsx
(+661 files in other folders)
