[build-system]
requires = ["setuptools>=77", "setuptools-scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "lifeos-cli"
dynamic = ["version"]
description = "Command-line tooling for personal operating system workflows, tools, and automation."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "liujuanjuan1984" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "alembic>=1.16,<2.0",
    "aiosqlite>=0.21,<1.0",
    "python-dateutil>=2.9,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "sqlalchemy>=2.0,<3.0",
    "tomli>=2.3,<3.0; python_version < '3.11'",
]

[project.scripts]
lifeos = "lifeos_cli.cli:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.18,<2.0",
    "pip-audit>=2.9,<3.0",
    "pre-commit>=4.5.0,<5.0",
    "pytest>=8.4,<10.0",
    "ruff>=0.11,<0.16",
    "types-python-dateutil>=2.9.0.20241206,<3.0",
    "vulture>=2.14,<3.0",
]

[project.urls]
Homepage = "https://github.com/liujuanjuan1984/lifeos-cli"
Repository = "https://github.com/liujuanjuan1984/lifeos-cli"
Issues = "https://github.com/liujuanjuan1984/lifeos-cli/issues"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"scripts/vulture_whitelist.py" = ["F821"]

[tool.ruff.format]
quote-style = "double"

[tool.uv]
package = true

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lifeos_cli = [
    "py.typed",
    "locales/*/*.json",
]
"lifeos_cli.alembic" = ["script.py.mako"]

[tool.setuptools_scm]
fallback_version = "0+unknown"
tag_regex = "^v?(?P<version>.+)$"

[tool.mypy]
python_version = "3.10"
files = ["src/lifeos_cli", "tests"]
show_error_codes = true
pretty = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: runs real CLI integration tests against a configured PostgreSQL database",
]
